data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4178.wast
;; 7. **Test Description**: Create a test where the `call_indirect` instruction is responsible for choosing different functions in each iteration of a loop, with a `br_if` trapped inside the indirect call. Exiting the main loop should depend on whether the `br_if` inside the indirect call is ever triggered.    - **Constraint Being Checked**: Properly structured function calls and correct handling of loop control from within an indirect function call.    - **Relation to Infinite Loops**: Incorrect in-loop control signaling causing incorrect loop handling and resulting in an infinite loop.

(assert_invalid
  (module
    (type $sig1 (func (result i32)))
    (type $sig2 (func (param i32) (result i32)))
    (func $fn1 (result i32)
      (block (result i32)
        (br_if 0 (i32.const 1))
      )
    )
    (func $fn2 (param i32) (result i32)
      (block
        (br_if 1 (local.get 0))
      )
      (i32.const 0)
    )
    (table funcref (elem $fn1 $fn2))
    (func $main 
      (loop (result i32)
        (call_indirect (type $sig2) (i32.const 1) (i32.const 1))
        (br_if 1 (i32.const 0))
      )
    )
    (type $sig3 (func (param i32 i32) (result i32)))
    (func $mismatch (param i32 i32) (result i32)
      (i32.const 0)
    )
    (table 2 funcref)
    (func $invalid-call 
      (call_indirect (type $sig3) (i32.const 0) (i32.const 1))
    )
  )
  "type mismatch"
)